<resources>
    <string name="app_name">Kő 🗿 Papír 📜 Olló ✂</string>
    <string name="dontetlenek">Döntetlenek száma:</string>
    <string name="gep_dontes">A gép választása</string>
    <string name="felhasznalo_dontes">A te választásod</string>
    <string name="gep">Gép</string>
    <string name="felhasznalo">Játékos</string>
    <string name="elet">Élet</string>
    <string name="gepidontes">Gép döntése</string>
    <string name="felhasznalodontes">Az ön döntése</string>
    <string name="ko">Kő</string>
    <string name="papir">Papír</string>
    <string name="ollo">Olló</string>
</resources>