<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/image_Gep_3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:src="@drawable/heart2" />

            <ImageView
                android:id="@+id/image_Gep_2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:src="@drawable/heart2" />

            <ImageView
                android:id="@+id/image_Gep_1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:src="@drawable/heart2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/gep"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/felhasznalo"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/image_Felhasznalo_1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:src="@drawable/heart2" />

            <ImageView
                android:id="@+id/image_Felhasznalo_2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:src="@drawable/heart2" />

            <ImageView
                android:id="@+id/image_Felhasznalo_3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:src="@drawable/heart2" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_Dontetlenek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dontetlenek"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView_Gep"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/rock" />

    <TextView
        android:id="@+id/textView_GepDontese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gep_dontes"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView_Felhasznalo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/rock" />

    <TextView
        android:id="@+id/textView_FelhasznaloDontes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/felhasznalo_dontes"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_DontesKo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/rock" />

        <ImageView
            android:id="@+id/imageView_DontesPapir"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/paper" />

        <ImageView
            android:id="@+id/imageView_DontesOllo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/scissors" />
    </LinearLayout>
</LinearLayout>

